--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Title h1 headfddfdfdfing  fddfdf</h1>   
+    <h1>Title h1 headfddfdfdfing  fddfdf</h1> 
+    <p>tiger<p>  
 </body>
 </html>
